fixed basket optimization and added readme